Changed main container to 3 rows for now. Have 2 projects per row. Currently they are overlapping each other, so that needs to be fixed. Footer container created and stylized.

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -12,10 +12,11 @@ h1{
     font-weight: bold;
 }
 
+/* Header section styling */
 .container-header{
     display: grid;
-    grid-template-columns: 10% 1fr 1fr 10%;
     grid-template-rows: 1fr 1fr;
+    grid-template-columns: 10% 1fr 1fr 10%;
     justify-items: center;
     align-items: center;
     background-color: #A9E5BB;
@@ -47,15 +48,43 @@ h1{
 
     }
 
+/* Main section styling */
 .container-main{
     display: grid;
+    grid-template-rows: auto 1fr 1fr;
     grid-template-columns: 10% 1fr 1fr 10%;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-    justify-items: center;
     align-items: center;
+    justify-items: center;
     /* background-color: #FCF6B1; */
 }
+    .main-header{
+        grid-row-start:1;
+        grid-column-start: 2;
+        grid-column-end: span 2;
+    }
 
-/* .row-footer{
-    grid-area: "footer";
-} */
+    .main-row-1{
+        grid-row-start: 2;
+        grid-column-start: 2;
+    }
+    .main-row-2{
+        grid-row-start:3;
+    }
+
+/* Footer section styling */
+.container-footer{
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 10% auto 10%;
+    align-items: center;
+    justify-items: center;
+    background-color: #2D1E2F;
+    font-family: 'Montserrat', sans-serif;
+    
+}
+
+    .footer-text{
+        grid-column-start: 2;
+        color: #A9E5BB;
+        padding: 8px;
+    }
